WIP: save current backend work before applying patch

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "axum_full_backend"
+name = "TB-backend"
 version = "0.1.0"
 edition = "2021"
 
@@ -22,3 +22,5 @@ time = "0.3.20"
 tower-http = { version = "0.5.2", features = ["cors", "trace"] }
 tracing-subscriber = { version = "0.3.18" }
 lettre = "0.11.7"
+rand = "0.8"
+hex = "0.4"
